MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/Business_Process_Documents__c.object-meta.xml
<CustomObject>
    <label>Business Process Documents</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Process Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>