MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Available_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available to Customer</label>
    <type>Checkbox</type>
</CustomField>