MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Business_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Process Documents</relationshipLabel>
    <relationshipName>Business_Process_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>