MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/De_Snag_Link__c.field-meta.xml
<CustomField>
    <fullName>De_Snag_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>De Snag Link</label>
    <type>Url</type>
</CustomField>