MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Design_Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Design_Lead_status__c</fullName>
    <label>Design Lead status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved as noted</fullName>
            </value>
            <value>
                <fullName>Revise and resubmit</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>