MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Development_Incharge_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Incharge_Review_Status__c</fullName>
    <label>Development Incharge Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved as noted</fullName>
            </value>
            <value>
                <fullName>Revise and resubmit</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>