MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Home_Modification_Document_Display__c.field-meta.xml
<CustomField>
    <fullName>Home_Modification_Document_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Modification Document Display</label>
    <type>Checkbox</type>
</CustomField>