MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Process_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Process_Checklist_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Checklist Items</label>
    <referenceTo>Process_Checklist_Items__c</referenceTo>
    <relationshipLabel>Business Process Documents</relationshipLabel>
    <relationshipName>Business_Process_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>