MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Process_Flow_Document__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Flow Document</label>
    <referenceTo>Process_Flow_Document__c</referenceTo>
    <relationshipLabel>Business Process Documents</relationshipLabel>
    <relationshipName>Business_Process_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>