MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Review_Comment__c.field-meta.xml
<CustomField>
    <fullName>Review_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Comment</label>
    <type>TextArea</type>
</CustomField>