MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Snag_Link__c.field-meta.xml
<CustomField>
    <fullName>Snag_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Link</label>
    <type>Url</type>
</CustomField>