MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/fields/Snagging__c.field-meta.xml
<CustomField>
    <fullName>Snagging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snagging</label>
    <referenceTo>Snagging__c</referenceTo>
    <relationshipLabel>Business Process Documents</relationshipLabel>
    <relationshipName>Business_Process_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>