MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/listViews/CCO_Approval_Business_Process_Documents.listView-meta.xml
<ListView>
    <fullName>CCO_Approval_Business_Process_Documents</fullName>
    <filterScope>Queue</filterScope>
    <label>CCO Approval</label>
    <queue>CCO_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>