MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/listViews/ED_Approval_Business_Process_Documents.listView-meta.xml
<ListView>
    <fullName>ED_Approval_Business_Process_Documents</fullName>
    <filterScope>Queue</filterScope>
    <label>ED Approval</label>
    <queue>ED_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>