MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Documents__c/listViews/EP_Finance_Validation_Business_Process_Documents.listView-meta.xml
<ListView>
    <fullName>EP_Finance_Validation_Business_Process_Documents</fullName>
    <filterScope>Queue</filterScope>
    <label>EP Finance Validation</label>
    <queue>EP_Finance_Validation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>